# spotify_ai_playlists_maker

./: .cache  .gitignore  README.md  app.py  genres_playlist_maker.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt  saved_tracks_extractor.py  spotify_data.pickle  test2.ipynb
scripts/music_backup/: __init__.py
src/spotify_ai_playlists_maker/: __init__.py
